<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btBuscarMenu"
        android:icon="@drawable/icon_buscar"
        android:iconTintMode="add"
        android:title="@string/btBuscarMenuSimple"
        app:showAsAction="always" />
    <item
        android:id="@+id/btPreferenciasMenu"
        android:icon="@drawable/icon_preferencias"
        android:iconTintMode="add"
        android:title="@string/btPreferenciasMenuSimple"
        app:showAsAction="always" />
    <item
        android:id="@+id/btCerrarSesion"
        android:icon="@drawable/icon_logout"
        android:iconTintMode="add"
        android:title="@string/btCerrarSesionMenuSimple"
        app:showAsAction="always" />
</menu>