<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLoginRegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlador.ActivityLoginRegister">

    <Button
        android:id="@+id/btLogin"
        android:layout_width="158dp"
        android:layout_height="49dp"
        android:text="@string/etInicioSesion"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRecordarDatos"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/etUsuarioLog"
        android:layout_width="84dp"
        android:layout_height="27dp"
        android:text="@string/etUsuarioLog"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInfoLog"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/etContraLog"
        android:layout_width="97dp"
        android:layout_height="28dp"
        android:text="@string/etContraLog"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/txtContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etContraLog"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraLog"
        app:layout_constraintVertical_bias="0.031" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etUsuarioLog"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuarioLog"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/btSignup"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:text="@string/btRegistrarse"
        android:textColor="?android:attr/textColorSecondary"
        android:textColorHighlight="?android:attr/textColorSecondary"
        android:textColorLink="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/etInfoLog"
        android:layout_width="224dp"
        android:layout_height="54dp"
        android:text="@string/etInicioSesion"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/btVerPass"
        android:layout_width="54dp"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/boton_redondo"
        android:textColor="?android:attr/textColorSecondary"
        android:textColorHighlight="?android:attr/textColorSecondary"
        android:textColorLink="?android:attr/textColorSecondary"
        app:icon="@drawable/icon_ojo"
        app:iconTint="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toEndOf="@+id/txtContrasenia"
        app:layout_constraintTop_toBottomOf="@+id/etContraLog"
        app:layout_constraintVertical_bias="0.03" />

    <CheckBox
        android:id="@+id/cbRecordarDatos"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:text="@string/cbRecordarDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.399"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenia"
        app:layout_constraintVertical_bias="0.025" />

</androidx.constraintlayout.widget.ConstraintLayout>